# user-service

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  config.toml  go.mod  go.sum  main.go  makefile  user_test.go
apiHandlers/: auth.go
apihandlers/: auth.go
apiv1/: router.go  token.go  user.go
config/: config.go
decorators/: auth.go
models/: db.go  user.go
old/: config.toml  go.mod
old/apihandlers/: auth.go
old/models/: user.go
old/server/: server.go
protobuf/: user.pb.go  user.proto
server/: server.go
service/: user.go
src/: config.rs  db.rs  errors.rs  interface.rs  main.rs  utils.rs
src/api/: mod.rs  token.rs  user.rs
src/handles/: token.rs  utils.rs
src/models/: mod.rs  schema.rs  user.rs
