[package]
name = "user-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "3.3.2"
bcrypt = "0.10.0"
clap = "2.33.3"
derive_more = "0.99.14"
diesel = { version = "1.4.7", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.4"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"
r2d2 = "0.8.9"
rust-argon2 = "0.8.3"
serde = {version = "1.0.126", features = ["derive"]}
serde_derive = "1.0.126"
serde_json = "1.0.64"
toml = "0.5.8"
uuid = "0.8.2"
